# orrery

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  LICENSE  QWEN_SUPPORT.md  README.md  TOPIC_REDUCTION_FRONTEND_GUIDE.md  debug_chroma_get.py  docker-compose.yml  install_requirements.sh  pyproject.toml  results.csv  setup_rust.sh  start_backend.sh  start_dev.sh
diagnostics/: README.md  qwen_scope_smoke.py
documentation/: DOCKER.md  DUCKDB_MIGRATION_PLAN.md  ISSUES_REPORT.md  LABEL_PLACEMENT_GUIDE.md  NEBULA_CLUSTER_EFFECTS.md  PROJECTION_FIDELITY.md  SAE_ARCHITECTURE.md  paper_core_points.md  updated_readme.md
documentation/paper/: annotations.md
embedding_visualization/: .dockerignore  AGENTS.md  Dockerfile  README.md  claude.md  next.config.ts  package-lock.json  package.json
embedding_visualization/app/: globals.css  layout.tsx  page.tsx  providers.tsx
embedding_visualization/docs/: scatterplot3d_analysis.md
embedding_visualization/lib/: utils.ts
experiments/directions_common/: README.md  __init__.py
experiments/poetry_directions/: evaluate.py  extract.py  run.py  runner.py  sweep.py
experiments/refusal_directions/: README.md  download_dataset.py  evaluate.py  generate_directions.py  run.py  runner.py  select_direction.py  tokens.py
inference/: gemma_pytorch.py  qwen3_transformers.py  streaming.py
interpretability_backend/: AGENTS.md  CLAUDE.md  README.md
interpretability_backend/backend/: README.md  __init__.py  embed_dataset.py  main.py  schema.py  schema_old.py
interpretability_backend/benchmarks/: bench_chromadb_baseline.py  bench_duckdb_comparison.py  results_chromadb_baseline.json  results_duckdb_comparison.json
interpretability_backend/evaluation/: README.md  __init__.py  eval_config.toml  evaluation_results.json  projection_fidelity.py  projection_fidelity_config.toml  quality_metrics.py  run_evaluation.py  run_projection_fidelity.py
interpretability_backend/resources/: job_state.json
interpretability_backend/scripts/: README.md  build_seed_snapshot.py  docker_warmup_sae.py  generate_color_strips.py  migrate_chromadb_to_duckdb.py
interpretability_backend/test/: Atlas.ipynb  cat_experiments.ipynb  compute_projections.py  debug_chroma.py  debug_schema.py  embeddingSpeedTest.ipynb  example_usage.py  query_wordnet.py  sparse_embeddings_test.ipynb  synset_examples.py  wordnetExplorer.ipynb
interpretability_backend/unit_tests/: conftest.py
interpretability_backend/utils/: utils.py
notebooks/: refusal_steer_tester.ipynb  refusal_tester.py
probing/: README.md  __init__.py  caching.py  consolidate.py  orchestrator.py
probing/configs/: cache.py  csv_features_extraction.py  delta_extraction.py  probe.py  sae_extraction.py
probing/extraction/: extract_csv_features.py  extract_encoder_activations.py  extract_gemma_activations.py
probing/manifests/: __init__.py  manifest_base.py
probing/probes/: _chart_style.py  ablation_feature_bars.py  ablation_feature_bars_variants.py  ablation_grouped_chart.py  mlp_ablation.py  mlp_probe.py  sklearn_probes.py
probing/sae_analysis/: correlation_map.py  feature_sweep.py  lasso_alpha_sweep.py  top_features.py
probing/utils/: metrics.py
sae/: __init__.py  activation_store.py  hook_manager.py  loading.py  sae_config.py
utils/: distances.py  mantel.py
(+361 files in other folders)
