[project]
name = "embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "chromadb>=1.3.4",
    "dataset>=1.6.2",
    "datasets>=4.3.0",
    "embedding-atlas>=0.12.0",
    "fastapi>=0.115.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pympler>=1.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "strawberry-graphql[fastapi]>=0.253.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.0",
    "tqdm>=4.66.0",
    "transformers>=4.57.1",
    "umap-learn>=0.5.9.post2",
    "uvicorn[standard]>=0.34.0",
    "qdrant-client>=1.9.0",
    "pymupdf>=1.26.7",
    "plotly>=6.5.0",
    "flagembedding>=1.3.5",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "hdbscan>=0.8.41",
    "openai>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
