[project]
name = "embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "chromadb>=1.3.4",
    "dataset>=1.6.2",
    "datasets>=4.3.0",
    "embedding-atlas>=0.12.0",
    "fastapi>=0.115.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pympler>=1.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "strawberry-graphql[fastapi]>=0.253.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.0",
    "tqdm>=4.66.0",
    "transformers>=5.2",
    "umap-learn>=0.5.9.post2",
    "uvicorn[standard]>=0.34.0",
    "qdrant-client>=1.9.0",
    "pymupdf>=1.26.7",
    "plotly>=6.5.0",
    "flagembedding>=1.3.5",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "hdbscan>=0.8.41",
    "openai>=2.24.0",
    "hilbertcurve>=2.0.5",
    "duckdb>=1.2.0",
    "pytest>=9.0.2",
    "google-genai>=1.73.1",
    "requests>=2.32.5",
    "sae-lens>=6.43.0",
    "zstandard>=0.25.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "gensim>=4.4",
    "scikit-image>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["interpretability_backend"]
extend-exclude = [
    "interpretability_backend/sae_inference/gemma_pytorch",
    "interpretability_backend/interpretability_experiments/WordNet/wordnet_data",
    "embedding-atlas",
    "tensorboard",
    "embedding_visualization",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "ASYNC",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"unit_tests/**" = ["F401", "F811"]
"test/**" = ["F401", "F811"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["interpretability_backend"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
